<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/guideline13" />

        <EditText
            android:id="@+id/cardNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/card_number_hint"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/favoriteSportEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/favorite_sport_hint"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/favoriteTeamEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/favorite_team_hint"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/favoriteFoodEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/favorite_food_hint"
            android:textColor="#000000"
            android:textColorHint="#757575" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="398dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
